--- a/p2.yml
+++ b/p2.yml
@@ -6,3 +6,7 @@
             docker_image:
                   name: sivani4/calculator 
                   source: pull
+                  
+                  
+          - name: running container
+            shell: docker run -it -d sivani4/calculator /bin/bash        
